<?xml version="1.0" encoding="utf-8"?>
<!-- Rheema Ayyash
Project 3b
May 7, 2025

creates a scroll view in constraint layout and adds the image
as well as the 3 different buttons like the typing, select, drop down etc.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/airplane"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/img_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp" />

        <Spinner
            android:id="@+id/spn_destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/destination_list"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/spn_destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/rad_economy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Economy" />

            <RadioButton
                android:id="@+id/rad_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Business" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/chk_luggage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_extra_luggage_30"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edt_passengers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_passengers"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/chk_luggage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitForm"
            app:layout_constraintTop_toBottomOf="@id/edt_passengers"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="resetForm"
            app:layout_constraintTop_toBottomOf="@id/edt_passengers"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/txt_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forms_submitted_0"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btn_submit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

